update br to 3.7.0

--- a/docs-2.0/backup-and-restore/nebula-br-ent/1.br-ent-overview.md
+++ b/docs-2.0/backup-and-restore/nebula-br-ent/1.br-ent-overview.md
@@ -17,6 +17,7 @@ For the deployment of BR in K8s Operator, see [Backup and restore data using Neb
 - Cloud and on-premises backup and restoration:
   - Local disks (SSD or HDD). It is recommended to use local disks with the shared storage service NFS.
   - Cloud services compatible with the Amazon S3 interface, such as Alibaba Cloud OSS, MinIO, Ceph RGW, etc.
+  - Google Cloud Storage (GCS).
 - Support to view the progress of backup or restoration.
 
 ## Limits
