--- a/docs-2.0/backup-and-restore/nebula-br-ent/3.backup-data.md
+++ b/docs-2.0/backup-and-restore/nebula-br-ent/3.backup-data.md
@@ -1,6 +1,6 @@
 # Back up data with BR (Enterprise Edition)
 
-You can use BR (Enterprise Edition) to back up NebulaGraph data. You can perform full backups and incremental backups. You can also back up data to your local disks and to cloud storage services compatible with the Amazon S3 interface. This topic introduces how to back up NebulaGraph data.
+You can use BR (Enterprise Edition) to back up NebulaGraph data. You can perform full backups and incremental backups. You can also back up data to your local disks, Google Cloud Storage, and cloud storage services compatible with the Amazon S3 interface. This topic introduces how to back up NebulaGraph data.
 
 ## Background
 
@@ -36,7 +36,9 @@ You can use BR (Enterprise Edition) to back up NebulaGraph data. You can perform
 
 !!! note
 
-    You can back up data to the cloud storage services that are compatible with the Amazon S3 interface.
+    The following sections use a cloud storage service compatible with the Amazon S3 interface as an example. 
+
+    You can also back up data to Google Cloud Storage, in which case, you need to replace the S3-related options with the `--gs.credentials` option and modify the `--storage` option accordingly. For more information, see the **Options** section below.
 
 In the directory of the BR Enterprise Edition installation tool, run the following command to back up the entire data of your NebulaGraph database to a cloud storage service:
 
@@ -50,9 +52,20 @@ For example, perform a full backup of the entire cluster where one of the meta s
 ./br backup full --meta 192.168.8.129:9559 --s3.access_key QImbbGDjfQExxx --s3.secret_key dVSJZfl7tnoFq7Z5zt6sfxxxx  --s3.region us-east-1 --storage s3://nebula-br-test/ --s3.endpoint http://192.168.8.xxx:9000/
 ```
 
+If the cluster has mTLS (mutual Transport Layer Security) authentication encryption enabled and you want to perform a backup operation, you need to include the `--enable-ssl`, `--ca-path`, `--cert-path`, `--key-path`, and `--insecure-skip-verify` parameters.
+
+```
+./br backup full --meta 192.168.8.xxx:9559 --s3.access_key QImbbGDjfQExxx --s3.secret_key dVSJZfl7tnoFq7Z5zt6sfxxxx  --s3.region us-east-1 --storage s3://nebula-br-test/ --s3.endpoint http://192.168.8.xxx:9000/ --enable-ssl --ca-path=<ca_cert_path> --cert-path=<client_cert_path> --key-path=<client_key_path> --insecure-skip-verify=true
+```
+
+For descriptions of the parameters, see the below section **Options**.
+
+Alternatively, you can configure environment variables `CA_CERT_PATH`, `CLIENT_CERT_PATH`, and `CLIENT_KEY_PATH` to specify the storage paths of the Certificate Authority (CA) root certificate, public key certificate, and private key certificate respectively. After these environment variables are configured, you do not need to set the `--ca-path`, `--cert-path`, and `--key-path` options in the preceding example because the environment variables override the corresponding options.
+
+
 ### To a local disk
 
-!!! caution
+!!! warning
 
     In the production environment, we recommend that you mount NFS (Network File System) to the machines where the meta service, the storage service, and the BR Enterprise Edition tool are located for local backups, or use Alibaba Cloud OSS, and Amazon S3 for cloud backups. Otherwise, you must manually move these backup files to the specified directory before restoring the data.
 
@@ -74,6 +87,17 @@ For example, perform a full backup of the entire cluster where one of the meta s
 ```
 ./br backup full --meta "192.168.8.129:9559" --storage "local:///backup/"
 ```
+
+If the cluster has mTLS (mutual Transport Layer Security) authentication encryption enabled and you want to perform a backup operation, you need to include the `--enable-ssl`, `--ca-path`, `--cert-path`, `--key-path`, and `--insecure-skip-verify` parameters.
+
+```
+./br backup full --meta "192.168.8.xxx:9559" --storage "local:///backup/" --enable-ssl --ca-path=<ca_cert_path> --cert-path=<client_cert_path> --key-path=<client_key_path> --insecure-skip-verify=true
+```
+
+For descriptions of the parameters, see the below section **Options**.
+
+Alternatively, you can configure environment variables `CA_CERT_PATH`, `CLIENT_CERT_PATH`, and `CLIENT_KEY_PATH` to specify the storage paths of the CA root certificate, public key certificate, and private key certificate respectively. After these environment variables are configured, you do not need to set the `--ca-path`, `--cert-path`, and `--key-path` options in the preceding example because the environment variables override the corresponding options.
+
 
 ### Directory structure
 
@@ -111,9 +135,16 @@ Full backups back up all the data of the leader metad and leader partitions. The
 
 ### To a cloud storage service
 
+!!! warning
+
+    Before performing an incremental backup, make sure that the data of the previous full backup or incremental backup is not changed. Otherwise, the incremental backup may fail. 
+
 !!! note
 
-    You can back up data to the cloud storage services that are compatible with the Amazon S3 interface.
+    The following sections use a cloud storage service compatible with the Amazon S3 interface as an example. 
+
+    You can also back up data to Google Cloud Storage, in which case, you need to replace the S3-related options with the `--gs.credentials` option and modify the `--storage` option accordingly. For more information, see the **Options** section below.
+
 
 In the directory of the BR Enterprise Edition installation tool, run the following command to back up the incremental data of your NebulaGraph database to a cloud storage service:
 
@@ -126,6 +157,17 @@ For example, based on the file `BACKUP_2022_08_11_09_11_07`, perform an incremen
 ```
 ./br backup incr --meta 192.168.8.129:9559 --s3.access_key QImbbGDjfQExxx --s3.secret_key dVSJZfl7tnoFq7Z5zt6sfxxxx  --s3.region us-east-1 --storage s3://nebula-br-test/ --s3.endpoint http://192.168.8.xxx:9000/ --base BACKUP_2022_08_11_09_11_07
 ```
+
+If the cluster has mTLS (mutual Transport Layer Security) authentication encryption enabled and you want to perform a backup operation, you need to include the `--enable-ssl`, `--ca-path`, `--cert-path`, `--key-path`, and `--insecure-skip-verify` parameters.
+
+```
+./br backup incr --meta 192.168.8.xxx:9559 --s3.access_key QImbbGDjfQExxx --s3.secret_key dVSJZfl7tnoFq7Z5zt6sfxxxx  --s3.region us-east-1 --storage s3://nebula-br-test/ --s3.endpoint http://192.168.8.xxx:9000/ --base BACKUP_2022_08_11_09_11_07 --enable-ssl --ca-path=<ca_cert_path> --cert-path=<client_cert_path> --key-path=<client_key_path> --insecure-skip-verify=true
+```
+
+For descriptions of the parameters, see the below section **Options**.
+
+Alternatively, you can configure environment variables `CA_CERT_PATH`, `CLIENT_CERT_PATH`, and `CLIENT_KEY_PATH` to specify the storage paths of the CA root certificate, public key certificate, and private key certificate respectively. After these environment variables are configured, you do not need to set the `--ca-path`, `--cert-path`, and `--key-path` options in the preceding example because the environment variables override the corresponding options.
+
 
 ### To a local disk
 
@@ -145,6 +187,16 @@ For example, based on the file `BACKUP_2022_08_11_09_11_07`, perform an incremen
 ```
 ./br backup incr --meta "192.168.8.129:9559" --storage "local:///backup/" --base BACKUP_2022_08_11_09_11_07
 ```
+
+If the cluster has mTLS (mutual Transport Layer Security) authentication encryption enabled and you want to perform a backup operation, you need to include the `--enable-ssl`, `--ca-path`, `--cert-path`, `--key-path`, and `--insecure-skip-verify` parameters.
+```
+./br backup incr --meta "192.168.8.xxx:9559" --storage "local:///backup/" --base BACKUP_2022_08_11_09_11_07 --enable-ssl --ca-path=<ca_cert_path> --cert-path=<client_cert_path> --key-path=<client_key_path> --insecure-skip-verify=true
+```
+
+For descriptions of the parameters, see the below section **Options**.
+
+Alternatively, you can configure environment variables `CA_CERT_PATH`, `CLIENT_CERT_PATH`, and `CLIENT_KEY_PATH` to specify the storage paths of the CA root certificate, public key certificate, and private key certificate respectively. After these environment variables are configured, you do not need to set the `--ca-path`, `--cert-path`, and `--key-path` options in the preceding example because the environment variables override the corresponding options.
+
 
 ### Directory structure
 
@@ -180,17 +232,24 @@ The structure of an incremental backup is as follows:
 
 | Option | Data type | Required | Default value | Description |
 | --- | --- | --- | --- | --- |
-| `-h`,`--help` | - | No | None | View more information about BR commands. |
-| `--debug` | - | No | None | View more information for BR logs. |
-| `--log` | string | No | `"br.log"` | The path of BR logs. |
+| `-h`,`--help` | - | No | None | View more information about {{br_ent.name}} commands. |
+| `--debug` | - | No | None | View more information for {{br_ent.name}} logs. |
+| `--log` | string | No | `"br.log"` | The path of {{br_ent.name}} logs. |
 | `--concurrency` | int | No | None | Used to control the number of concurrent file uploads during data backup. The default value is `5`.|
 | `--meta` | string | Yes | None | The IP address and port number of any Meta service in the cluster. |
-| `--storage` | string | Yes | None | The storage path of the data to be backed up in the form of `<schema>://<storage_path>`.<br>`schema`: Two options, `s3` and `local`.<br>When `schema` is `s3`, you still need to add options of `s3.access_key`、`s3.endpoint`、`s3.region`, and `s3.secret_key`.<br>`<storage_path>`: The storage path.|
+| `--storage` | string | Yes | None | The storage path of the data to be backed up in the form of `<schema>://<storage_path>`.<br>`schema`: Three options: `local`, `s3`, and `gs`.<br>When `schema` is `s3`, you need to add options of `--s3.access_key`、`--s3.endpoint`、`--s3.region`, and `--s3.secret_key`.<br>When `schema` is `gs`, you need to add the `--gs.credentials` option. <br>`<storage_path>`: The storage path.|
 | `--s3.access_key` | string | No | None | The Access Key ID that is used to identify a user.  |
 | `--s3.endpoint` | string | No | None | The S3 endpoint URL. You need to specify the HTTP or HTTPS scheme explicitly. |
 | `--s3.region` | string | No | None |  The physical location of a data center. |
 | `--s3.secret_key`| string | No | None | The Access Key Secret that is used to verify the identity of the user. |
 | `--base` | string | Yes | None | The name of the directory of any previous backup. Based on this backup, perform an incremental backup. |
+| `--enable-ssl`        | -      | No       | None                    | Enable mTLS encryption for mutual authentication with NebulaGraph. |
+| `--ca-path`           | string | No       | None                    | Storage path for the CA root certificate. The default path is `/usr/local/certs/ca.crt`. |
+| `--cert-path`         | string | No       | None                    | Storage path for the public key certificate. The default path is `/usr/local/certs/client.crt`. |
+| `--key-path`          | string | No       | None                    | Storage path for the private key certificate. The default path is `/usr/local/certs/client.key`. |
+| `--insecure-skip-verify` | bool | No     | False                   | Specify whether to skip verifying the server's certificate chain and hostname. The default is `false`, meaning it verifies the server's provided certificate chain and hostname. If set to `true`, verification is skipped. |
+| `--gs.credentials` | string | No | None | The JSON string that represents your service account key provided by Google Cloud. For more information, see [Create and delete service account keys](https://cloud.google.com/iam/docs/keys-create-delete). Example: `--gs.credentials='{"type":"service_account","project_id":"<project_id>","project_key":"<project_key>","private_key":"<private_key>","client_email":"<service_account_email>","client_id":"<client_id>","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://oauth2.googleapis.com/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","client_x509_cert_url":"https://www.googleapis.com/robot/v1/metadata/x509/<service_account_email>","universe_domain":"googleapis.com"}'`|
+
 
 ## View backup progress
 
