--- a/docs-2.0/k8s-operator/4.cluster-administration/4.6.backup-and-restore.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.6.backup-and-restore.md
@@ -12,7 +12,7 @@ This article introduces how to back up and restore data of the NebulaGraph clust
 
 When backing up data, NebulaGraph Operator creates a job to back up the data in the NebulaGraph cluster to the specified storage service.
 
-When restoring data, NebulaGraph Operator checks the specified backup NebulaGraph cluster for existence, and whether the access to remote storage is normally based on the information defined in the NebulaRestore resource object. It then creates a new cluster and restores the backup data to the new NebulaGraph cluster. For more information, see [restore flowchart](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/br_guide.md#restore-nebulagraph-cluster).
+When restoring data, NebulaGraph Operator checks the specified backup NebulaGraph cluster for existence, and whether the access to remote storage is allowed based on the information defined in the NebulaRestore resource object. It then creates a new cluster and restores the backup data to the new NebulaGraph cluster. For more information, see [restore flowchart](https://github.com/vesoft-inc/nebula-operator/blob/v{{operator.release}}/doc/user/br_guide.md#restore-nebulagraph-cluster).
 
 ## Prerequisites
 
@@ -33,7 +33,7 @@ To backup and restore data using NebulaGraph Operator, the following conditions 
   ...
   ```
 
-- Only storage services that use the S3 protocol (such as AWS S3, Minio, etc.) can be used to back up and restore data.
+- Only storage services that use the S3 protocol (such as AWS S3, Minio, etc.) and Google Cloud Storage can be used to back up and restore data.
 - Sufficient computing resources are available in the cluster to restore data.
 
 ## Backup 
@@ -41,7 +41,7 @@ To backup and restore data using NebulaGraph Operator, the following conditions 
 ### Notes
 
 - NebulaGraph Operator supports full and incremental backups.
-- During data backup, DDL and DML statements in the specified graph space will be blocked. We recommend performing the operation during off-peak hours, such as from 2:00 am to 5:00 am.
+- During data backup, DDL and DML statements in the specified graph space will be blocked. We recommend you perform the operation during off-peak hours, such as from 2:00 am to 5:00 am.
 - The cluster executing incremental backups and the cluster specified for the last backup must be the same, and the (storage bucket) path for the last backup must be the same.
 - Ensure that the time between each incremental backup and the last backup is less than a [`wal_ttl`](../../5.configurations-and-logs/1.configurations/4.storage-config.md#raft_configurations).
 - Specifying the backup data of a specified graph space is not supported.
@@ -62,9 +62,9 @@ To backup and restore data using NebulaGraph Operator, the following conditions 
 
 ### Full backup
 
-When backing up data to a storage service compatible with the S3 protocol, you need to create a backup job, which will back up the full NebulaGraph data to the specified storage location.
+When backing up data to a cloud storage service, you need to create a backup job, which will back up the full NebulaGraph data to the specified storage location.
 
-Here is an example of the YAML file for a full backup job:
+Here is an example of the YAML file for a full backup job that backs up data to an S3 protocol-compatible storage service:
 
 ```yaml
 apiVersion: batch/v1
@@ -88,11 +88,26 @@ spec:
             - -ecx
             - 'exec /usr/local/bin/br-ent backup full 
             --meta nebula-metad-0.nebula-metad-headless.nebula.svc.cluster.local:9559   # The address of the Metad service. 
-            --storage s3://BUCKET                           # The storage location of the backup file.
+            --storage s3://BUCKET_NAME # The name of the S3 bucket where the backup data is stored.
             --s3.access_key ACCESS_KEY                      # The AccessKey for accessing the S3 protocol-compatible storage service.
             --s3.secret_key SECRET_KEY                      # The SecretKey for accessing the S3 protocol-compatible storage service.
             --s3.region REGION                              # The region of the S3 protocol-compatible storage service.
             --s3.endpoint https://s3.REGION.amazonaws.com'  # The endpoint of the S3 protocol-compatible storage service.
+```
+
+To back up data to Google Cloud Storage, replace the S3-related options with the `--gs.credentials` option and modify the `--storage` option  in the `spec.template.spec.containers[0].command` section accordingly.
+
+Example:
+
+```yaml
+...
+          command:
+            - /bin/sh
+            - -ecx
+            - 'exec /usr/local/bin/br-ent backup full 
+            --meta nebula-metad-0.nebula-metad-headless.nebula.svc.cluster.local:9559   # The address of the Metad service. 
+            --storage gs://BUCKET_NAME                          # The name of the GCS bucket where the backup data is stored.
+            --gs.credentials '{"type":"service_account","project_id":"<project_id>","project_key":"<project_key>","private_key":"<private_key>","client_email":"<service_account_email>","client_id":"<client_id>","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://oauth2.googleapis.com/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","client_x509_cert_url":"https://www.googleapis.com/robot/v1/metadata/x509/<service_account_email>","universe_domain":"googleapis.com"}'# The JSON string that represents your service account key provided by Google Cloud.
 ```
 
 ### Incremental backup
@@ -121,7 +136,7 @@ spec:
             - -ecx
             - 'exec /usr/local/bin/br-ent backup incr
             --meta nebula-metad-0.nebula-metad-headless.nebula.svc.cluster.local:9559 # The address of the Metad service. 
-            --storage s3://BUCKET                           # The storage location of the backup file.
+            --storage s3://BUCKET_NAME # The name of the S3 bucket where the backup data is stored.
             --s3.access_key ACCESS_KEY                      # The AccessKey for accessing the S3 protocol-compatible storage service.
             --s3.secret_key SECRET_KEY                      # The SecretKey for accessing the S3 protocol-compatible storage service.
             --s3.region REGION                              # The region of the S3 protocol-compatible storage service.
@@ -154,13 +169,17 @@ When the data backup succeeds, a backup file is generated in the specified stora
 
 ### Encrypted backup
 
-If you enable mTLS authentication for the NebulaGraph cluster, you need to certify the BR-ent tool to access the NebulaGraph cluster. In the YAML file for the backup job, add volumes to store the client certificate files and the CA certificate files, and mount the certificate files to the container. Then add the `--enable_ssl` and `--insecure_skip_verify` options to the command for backing up data. 
+If you enable mTLS authentication for the NebulaGraph cluster, you need to certify the {{br_ent.name}} tool to access the NebulaGraph cluster. To do that, you can either mount the certificate files to the container or configure environment variables to specify the paths to the certificate files.
+
+#### Mount the certificate files to the container
+
+In the YAML file for the backup job, add volumes to store the client certificate files and the CA certificate files, and mount the certificate files to the container. Then add the `--enable-ssl` and `--insecure-skip-verify` options to the command for backing up data. 
 
 !!! note
 
     Create Secrets to store the certificate files before creating the backup job, and make sure the Secrets are in the namespace where the backup job is located. For details, see [Enable mTLS in NebulaGraph](4.7.security/4.7.1.enable-mtls.md).
 
-The following provides an example of the YAML file for a full backup job with mTLS authentication enabled:
+The following YAML file creates a full backup job that mounts the certificate files to the container:
 
 ```yaml
 apiVersion: batch/v1
@@ -184,13 +203,13 @@ spec:
             - -ecx
             - 'exec /usr/local/bin/br-ent backup full 
             --meta META_ADDRESS:9559 
-            --storage s3://BUCKET
+            --storage s3://BUCKET_NAME
             --s3.access_key ACCESS_KEY 
             --s3.secret_key SECRET_KEY 
             --s3.region REGION 
             --s3.endpoint https://s3.REGION.amazonaws.com
-            --enable_ssl                                      # Enable mTLS authentication.
-            --insecure_skip_verify'                           # Skip the verification of the server's certificate chain and hostname.
+            --enable-ssl                                      # Enable mTLS authentication.
+            --insecure-skip-verify'                           # Skip the verification of the server's certificate chain and hostname.
           volumeMounts:                                       # Mount the certificate files.              
             - mountPath: /usr/local/certs/client.crt          # The path of the certificate content file. The BR-ent tool reads the file from path /usr/local/certs/<subpath>.
               name: client-crt                                
@@ -225,6 +244,68 @@ spec:
             secretName: ca-cert                               # The name of the Secret that stores the CA certificate file.
 ```
 
+#### Configure environment variables to specify certificate file paths
+
+In the YAML file for the backup job, add a volume to store the certificate files and configure environment variables to specify the paths to the certificate files. Then add the `--enable-ssl` and `--insecure-skip-verify` options to the command for backing up data.
+
+!!! note
+
+    Create Secrets to store the certificate files before creating the backup job, and make sure the Secrets are in the namespace where the backup job is located. For details, see [Enable mTLS in NebulaGraph](4.7.security/4.7.1.enable-mtls.md). 
+
+The following YAML file creates a full backup job that configures environment variables to specify the paths to the certificate files:
+
+```yaml
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: nebula-full-backup
+spec:
+  parallelism: 1
+  ttlSecondsAfterFinished: 600
+  template:
+    spec:
+      restartPolicy: OnFailure
+      imagePullSecrets:
+        - name: nebula-image
+      containers:
+        - image: reg.vesoft-inc.com/cloud-dev/br-ent:v3.7.0
+          imagePullPolicy: Always
+          name: backup
+          env:
+          - name: CA_CERT_PATH
+            value: /credentials/ca.crt
+          - name: CLIENT_CERT_PATH
+            value: /credentials/client.crt
+          - name: CLIENT_KEY_PATH
+            value: /credentials/client.key
+          command:
+            - /bin/sh
+            - -ecx
+            - 'exec /usr/local/bin/br-ent backup full 
+            --meta META_ADDRESS:9559 
+            --storage s3://BUCKET_NAME
+            --s3.access_key ACCESS_KEY 
+            --s3.secret_key SECRET_KEY 
+            --s3.region REGION 
+            --s3.endpoint https://s3.REGION.amazonaws.com
+            --enable-ssl
+            --insecure-skip-verify'
+          volumeMounts:
+          - name: credentials
+            mountPath: /credentials
+        - name: auth-sidecar
+          imagePullPolicy: Always
+          image: reg.vesoft-inc.com/cloud-dev/nebula-certs:latest
+          volumeMounts:
+          - name: credentials
+            mountPath: /credentials
+      volumes:
+      - name: credentials
+        emptyDir:
+          medium: Memory
+```
+
+
 ## Restore
 
 ### Notes
@@ -248,9 +329,9 @@ The recovery process is as follows:
 
 6. When the cluster is ready, the Operator calls the agent interface to clear the downloaded backup data and remove the init container configuration of the current cluster. -->
 
-### Process
+### Restore from an S3 protocol-compatible storage service
 
-When restoring data from a compatible S3 protocol service, you need to create a Secret to store the credentials for accessing the compatible S3 protocol service. Then create a resource object (NebulaRestore) for restoring the data, which will instruct the Operator to create a new NebulaGraph cluster based on the information defined in this resource object and restore the backup data to the newly created cluster.
+When restoring data from an S3 protocol-compatible storage service, you need to create a Secret to store the credentials for accessing the compatible S3 protocol service. Then create a resource object (NebulaRestore) for restoring the data, which instructs NebulaGraph Operator to create a new NebulaGraph cluster based on the information defined in this resource object and restore the backup data to the newly created cluster.
 
 Here is an example YAML for restoring data based on the backup file `BACKUP_2023_02_12_10_04_16`:
 
@@ -280,7 +361,7 @@ spec:
       secretName: "aws-s3-secret"
 ```
 
-### Parameter Description
+#### Parameter Description
 
 - Secret
 
@@ -296,13 +377,68 @@ spec:
   |Parameter|Default Value|Description|
   |:---|:---|:---|
   |`metadata.name`|-|The name of the resource object NebulaRestore.|
-  |`spec.br.clusterName`|-|The name of the backup cluster. Backup based on this cluster, then create a new cluster with a name automatically generated. |
-  |`spec.br.backupName`|-|The name of the backup file. Restore data based on this backup file.|
+  |`spec.br.clusterName`|-|The name of the original cluster that was backed up. Data is restored based on the original cluster and a new cluster is created with a name automatically generated.|
+  |`spec.br.backupName`|-|The name of the backup file. Data is restored based on this backup file.|
   |`spec.br.concurrency`|`5`|The number of concurrent downloads when restoring data. The default value is `5`.|
   |`spec.br.s3.region`|-| The geographical region where the S3 storage bucket is located.|
-  |`spec.br.s3.bucket`|-|The path of the S3 storage bucket where backup data is stored.|
+  |`spec.br.s3.bucket`|-|The name of the S3 storage bucket where backup data is stored.|
   |`spec.br.s3.endpoint`|-|The access address of the S3 storage bucket.|
   |`spec.br.s3.secretName`|-|The name of the Secret that is used to access the S3 storage bucket.|
+
+
+### Restore from Google Cloud Storage
+
+When restoring data from Google Cloud Storage, you need to create a Secret to store the credentials for accessing Google Cloud Storage. Then create a resource object (NebulaRestore) for restoring the data, which instructs NebulaGraph Operator to create a new NebulaGraph cluster based on the information defined in this resource object and restore the backup data to the newly created cluster.
+
+Here is an example YAML for restoring data based on the backup file `BACKUP_2023_02_12_10_04_16`:
+
+```yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: gs-secret
+type: Opaque
+data:
+  credentials: <GOOGLE_APPLICATION_CREDENTIALS_JSON>
+---
+apiVersion: apps.nebula-graph.io/v1alpha1
+kind: NebulaRestore
+metadata:
+  name: restore1
+spec:
+  config:
+    clusterName: nebula
+    backupName: "BACKUP_2024_01_12_10_04_16"
+    concurrency: 3
+    gs:
+      location: us-central1
+      bucket: "nebula-br-test"
+      secretName: "gs-secret"
+```
+
+#### Parameter Description
+
+- Secret
+
+  |Parameter|Default Value|Description|
+  |:---|:---|:---|
+  |`metadata.name`|-|The name of the Secret.|
+  |`type`|`Opaque`|The type of the Secret. See [Types of Secret](https://kubernetes.io/docs/concepts/configuration/secret/#secret-types) for more information.|
+  |`data.credentials`|-|The JSON string that represents your service account key provided by Google Cloud.|
+
+- NebulaRestore
+
+  ｜Parameter｜Default Value｜Description｜
+  ｜:---｜:---｜:---｜
+  ｜`metadata.name`｜-｜The name of the resource object NebulaRestore.｜
+  ｜`spec.config.clusterName`｜-｜The name of the original cluster that was backed up. Data is restored based on the original cluster and a new cluster is created with a name automatically generated. ｜
+  ｜`spec.config.backupName`｜-｜The name of the backup file. Data is restored based on this backup file. ｜
+  ｜`spec.config.concurrency`｜`5`｜The number of concurrent downloads when restoring data. The default value is `5`. ｜
+  ｜`spec.config.gs.location`｜-｜The geographical region where the GCS bucket is located. ｜
+  ｜`spec.config.gs.bucket`｜-｜The name of the GCS bucket where backup data is stored. ｜
+  ｜`spec.config.gs.secretName`｜-｜The name of the Secret that is used to access the GCS bucket. ｜
+
+
 
 After setting up the YAML file for restoring the data, run the following command to start the restore job:
 
