--- a/docs-2.0/backup-and-restore/nebula-br-ent/2.install-tools.md
+++ b/docs-2.0/backup-and-restore/nebula-br-ent/2.install-tools.md
@@ -10,6 +10,7 @@ To use the BR (Enterprise Edition) tool, you need to install the NebulaGraph Age
 
 |NebulaGraph Enterprise Edition|BR Enterprise Edition|Agent |
 |:---|:---|:---|
+|3.6.x ~ 3.7.x|3.6.x ~ 3.7.0|3.6.x ~ 3.7.0|
 |3.5.x|3.5.1|3.4.0|
 |3.4.1|3.4.0 ~ 3.4.1|3.4.0|
 
@@ -76,12 +77,23 @@ In **each machine**, follow these steps:
   - `--agent`: The IP address and port number of Agent.
   - `--meta`: The IP address and access port of any Meta service in the cluster.
   - `--ratelimit`: (Optional) Limits the speed of file uploads and downloads to prevent bandwidth from being filled up and making other services unavailable. Unit: Bytes.
+  - `> nebula_agent.log 2>&1 &`: Optional. Outputs the Agent log to the `nebula_agent.log` file.
 
-  For example: 
+  If [mTLS authentication encryption](../../7.data-security/4.ssl.md) is enabled in the cluster, while executing the command to start the Agent, you need to add options such as `--enable_ssl`, `--ca_path`, `--cert_path`, `--key_path`, and `--insecure_skip_verify`.
+
+  For example:
 
   ```
-  sudo nohup ./agent --agent="192.168.8.129:8888" --meta="192.168.8.129:9559" --ratelimit=1048576 > nebula_agent.log 2>&1 &
+  sudo nohup ./agent --agent="192.168.8.xxx:8888" --meta="192.168.8.xxx:9559" --ratelimit=1048576 --enable_ssl --ca_path=<ca_cert_path> --cert_path=<client_cert_path> --key_path=<client_key_path> --insecure_skip_verify=true > nebula_agent.log 2>&1 &
   ```
+
+  - `--enable_ssl`: Enables mTLS (mutual Transport Layer Security) for connections to NebulaGraph for encrypted bidirectional authentication.
+  - `--ca_path`: Specifies the storage path for the Certificate Authority (CA) root certificate. The default path is `/usr/local/certs/ca.crt`.
+  - `--cert_path`: Specifies the storage path for the public key certificate. The default path is `/usr/local/certs/client.crt`.
+  - `--key_path`: Specifies the storage path for the private key certificate. The default path is `/usr/local/certs/client.key`.
+  - `--insecure_skip_verify`: Optional. Specifies whether to skip verification of the server's certificate chain and hostname. The default value is `false`, which means it verifies the server-provided certificate chain and hostname. If set to `true`, it skips verification.
+  
+  Alternatively, you can configure environment variables `CA_CERT_PATH`, `CLIENT_CERT_PATH`, and `CLIENT_KEY_PATH` to specify the storage paths of the CA root certificate, public key certificate, and private key certificate respectively. After these environment variables are configured, you do not need to set the `--ca_path`, `--cert_path`, and `--key_path` options in the preceding example because the environment variables override the corresponding options.
 
 5. Log into NebulaGraph and then run the following command to view the status of Agent.
   
