--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
@@ -278,13 +278,14 @@ graphd:
 
 `docker-compose pull`会同时更新 {{nebula.name}} 服务和 NebulaGraph Console。
 
-### StorageD 容器一直 Offline
+### Storaged 容器一直处于`offline`状态
 
-在小概率的情况下，Docker Compose 中的 StorageD 激活脚本没有在合适的时机被执行，我们可能发现 StoreageD 的容器 healthiness 状态一直是 Offline。这时候我们只需要通过 Nebula-Console 或者 NebulaGraph-Studio 连接 NebulaGraph，手动执行 `ADD HOSTS` 对其进行激活，具体的激活查询为：
+在小概率的情况下，Docker Compose 中的 Storaged 激活脚本并没有在适当的时机得到执行。如果发现 Storaged 容器的健康状态一直是`offline`状态，可以通过 NebulaGraph Console 或者 NebulaGraph Studio 连接 NebulaGraph，并手动执行`ADD HOSTS`命令对其进行激活。激活查询示例如下：
 
 ```
-ADD HOSTS "storaged0":9779,"storaged1":9779,"storaged2":9779'
+ADD HOSTS "storaged0":9779,"storaged1":9779,"storaged2":9779
 ```
+
 
 <!--
 ## 相关视频
